# polgons

./: CMakeLists.txt  Doxyfile  external.h  geometry_dev_task.md  main.cpp  output.csv  polygon.cpp  polygon.h  readme.txt  square.csv  triangle.csv
